--- a/fe/iot/src/scss/Datasensor.scss
+++ b/fe/iot/src/scss/Datasensor.scss
@@ -8,6 +8,7 @@ $button-color: #fff;
   padding: 20px;
   background-color: $app-background;
   min-height: 100vh;
+  height: 100vh;
 
   h1 {
     text-align: center;
